fix overlap issue and ui changes
- swap left and right columns for map game view
- fix overlap button in map view
- fix visited links showing blue color

--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,6 @@ code {
     monospace;
 }
 
-a:visited {
+a:link, a:visited {
   color: #ffdd55;
 }
